Access.protectionDomain() invokes clazz.getProtectionDomainInternal()
This avoids AccessControlException within
Lookup.lookupClassProtectionDomain initiated by
MethodHandleResolver.resolveInvokeDynamic();
Added a test to ensure proper permission check when invoking
BootstrapMethod.


Signed-off-by: Jason Feng <fengj@ca.ibm.com>